[metadata]
name = tipdyndns
version = 0.0.1
author = Melle Sieswerda
author_email = m.sieswerda@iknl.nl
description = Copy and transform data from SQLServer to FHIR resources.
long_description = file:README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
install_requires =
    click


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tipdyndns = tipdyndns.cli:cli